add uwsgi server

--- a/app/uwsgi.ini
+++ b/app/uwsgi.ini
@@ -1,5 +1,9 @@
 [uwsgi]
+# http server
+http = :8080
 module = app
 callable = create_app()
 master = true
-touch-reload = /app/uwsgi.ini
+touch-reload = ./uwsgi.ini
+socket = 127.0.0.1:3031
+
