--- a/task.yml
+++ b/task.yml
@@ -2,9 +2,36 @@
 - name: task to deploy
   gather_facts: false
   hosts: all
+  become: yes
   tasks:
 
   - name: pinpong
     ping:
 
-  - name: 
+  - name: update all package
+    apt:
+      name: "*"
+      state: latest
+      update_cache: yes
+  
+  - name: install packages list
+    apt:
+      name:
+      - python3
+      - python3-pip
+      - python3-apt
+      - python3-venv
+      - nginx
+      - git
+      - tree
+      
+  - name: clone app
+    git:
+      repo: https://github.com/ryabukha/site.git
+      dest: /www/site
+
+  - name: pip install flask
+    pip:
+      requirements: /www/site/requirements.txt
+      virtualenv: /www/site/auth
+      virtualenv_command: 'python3 -m venv /www/site/auth'
