--- a/task.yml
+++ b/task.yml
@@ -46,16 +46,25 @@
   - name: python manage.py db upgrade
     tags: run_migrate
     command: 
+      cmd: "{{ env_path_bin }}/python manage.py db upgrade"
+    args:
+      chdir: "{{ work_dir_path }}"
+    when: git_clone_app.changed
+
+  - name: python manage.py db migrate
+    tags: run_migrate
+    command: 
       cmd: "{{ env_path_bin }}/python manage.py db migrate"
     args:
       chdir: "{{ work_dir_path }}"
+    when: git_clone_app.changed
 
   - name: chown site work_dir_path
     file:
       path: "{{ work_dir_path }}"
       owner: www-data
       group: www-data
-      mode: '0755'
+      mode: '0750'
       recurse: yes
 
   - name: create systemctl unit
